Next Release
* Add ability to edit (delete) broken iDevices in a package
* Fix ability to delete iDevices with missing resources
* Fix unicode parsing of Wikipedia pages
* Fix rendering of attachment elements of custom iDevices

Version 0.95 (r2931)
* Add ability to embed images in text areas with TinyMCE
* Remove Image With Text iDevice, migrates to Free Text iDevice
* Remove image field from iDevice editor
* Java applet, SCORM Quiz, and Flash Movie now regular iDevices not plugins
* Display warning when user tries to close main eXe window
* Opening attachments in preview mode now uses preferred browser
* Add FTP to possible external web sites
* Fix position of iDevice edit button for SCORM Quiz
* Fix include content package schemas in RPM/DPKG packages
* Fix gallery slideshow to include caption for last image
* Fix gallery iDevice so it doesn't require clicking done check to register
* Fix iDevice editor display in French
* Fix packaging of CP and SCORM schemas in RPM and DPKG
* Change how Maths iDevice temporary file is created
* Workaround French Wikipedia parsing of &#160; in attributes
* Translation updates, including addition of Catalan
* Update to BeautifulSoup 3.0.4

Version 0.24 (r2857)
* Rewrite anchor tags in textareas in preview mode to use local browser
* Restrict Image Magnifier selection to jpg images
* Fix position of iDevice edit button in preview mode
* Fix Multi-Select iDevice icon
* Fix Reading Activity display after changing language preference
* Fix alignment of attachment iDevice in edit mode
* Fix Case Study image size
* Fix SCORM Quiz icon export
* Fix Win32: starting application by double-clicking long document name
* Fix Win32: print URLs
* Fix bullet point text wrap
* Fix unique resource names (bug most often seen in Image Gallery hanging)
* Add attachment button/field to iDevice editor
* Add image and media filenames when re-editing iDevices
* Add Hungarian Wikipedia
* Add Quit button to iDevice editor